--- a/src/main/resource/properties/db.properties
+++ b/src/main/resource/properties/db.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.116.31.24:3306/hive?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://114.116.31.24:3306/dbtaobao?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
 jdbc.maxActive=10
